[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Mob.gd" type="Script" id=2]
[ext_resource path="res://objects/MobBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/angry-face.png" type="Texture" id=4]
[ext_resource path="res://objects/StrengthItem.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="Mob" instance=ExtResource( 1 )]
script = ExtResource( 2 )
MobBullet = ExtResource( 3 )
Item = ExtResource( 5 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )

[node name="CollisionArea" parent="." index="1" groups=[
"enemy",
]]

[node name="CollisionShape2D" parent="CollisionArea" index="0"]
shape = SubResource( 2 )

[node name="MoveTimer" type="Timer" parent="." index="3"]
autostart = true
[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
